# FusedFourierKAN

./: CMakeLists.txt  LICENSE  README.md  exportops.cpp  ffkan.cpp  op.cpp  op.h  opGPU.cpp  opGPU.h  setup.py
FusedFourierKAN/: FusedFourierKANLayer.py  ffKANFunction.py  ffKANGPUFunction.py
kernels/: fusedFourierKAN.cu
